--- a/index.html
+++ b/index.html
@@ -70,17 +70,32 @@
             
             <!-- перший блок -->
             <div>
-                <img src="img/img.jpg" alt="backend development">
+                <img src="img/img.jpg" alt="backend development" 
+                position: absolute;
+                width: 370px;
+                height: 294px;
+                left: 215px;
+                top: 1061px;>
             </div>
 
             <!-- другий блок -->
             <div>
-                <img src="img/img1.jpg" alt="mobile app">
+                <img src="img/img1.jpg" alt="mobile app" 
+                position: absolute;
+                width: 370px;
+                height: 294px;
+                left: 615px;
+                top: 1061px;>
             </div>
 
             <!-- третій блок -->
             <div>
-                <img src="img/img2.jpg" alt="frontend development">
+                <img src="img/img2.jpg" alt="frontend development" 
+                position: absolute;
+                width: 370px;
+                height: 294px;
+                left: 1015px;
+                top: 1061px;>
             </div>
 
                  </div>
