--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- верхня лінія -->
         <header>
             <div>
-                <H2>Web Studio</H2>
+                <H2> <a href="index.html"><span class="Logo">Web</span>Studio</a>  </H2>
                 <!-- меню навігації -->
                 <nav>
                     <a href="studio">Студия</a>
@@ -20,10 +20,10 @@
                     <a href="Contacs">Контакти</a>
                 </nav>
                 <p>
-                    <a href="info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </p>
                 <p>
-                    <a href="+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </p>
             </div>
         </header>
@@ -134,13 +134,13 @@
              </main>
                          <!-- Підвал -->
                            <footer>
-              <h4>WebStudio</h4>
+              <h4><a href="index.html"><span class="Logo">Web</span>Studio</a></h4>
               <!-- адрес(контакти) -->
-              <div>
+                <address>
                   <p>г. Киев, пр-т Леси Украинки, 26</p>
-                  <p><a href="info@example.com">info@example.com</a></p>
-                  <p><a href="+380991111111">+38 099 111 11 11</a></p>
-              </div>
+                  <p><a href="mailto:info@example.com">info@example.com</a></p>
+                  <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
+                </address>
                           </footer>  
     
 </div>
