--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <!-- третій блок -->
             <div>
-                
+
                 <img src="img/img2.jpg" alt="frontend development" width="370" height="294" >
                 
             </div>
@@ -97,28 +97,28 @@
             <!-- перша анкета -->
             <div>
                 <figure>
-                    <img src="img/team card 1.jpg" alt="no foto">
+                    <img src="img/team_card1.jpg" alt="no foto">
                 </figure>
             </div>
 
             <!-- друга анкета -->
             <div>
                 <figure>
-                    <img src="img/team card 2.jpg" alt="no foto">
+                    <img src="img/team_card2.jpg" alt="no foto">
                 </figure>
             </div>
 
             <!-- третя анкета -->
             <div>
                 <figure>
-                    <img src="img/team card 3.jpg" alt="no foto">
+                    <img src="img/team_card3.jpg" alt="no foto">
                 </figure>
             </div>
 
             <!-- четверта анкета -->
             <div>
                 <figure>
-                    <img src="img/team card 4.jpg" alt="no foto">
+                    <img src="img/team_card4.jpg" alt="no foto">
                 </figure>
             </div>
                  </div>
