--- a/index.html
+++ b/index.html
@@ -97,28 +97,34 @@
             <!-- перша анкета -->
             <div>
                 <figure>
-                    <img src="img/team_card1.jpg" alt="no foto">
+                    <img src="img/team_card1.jpg" alt="no foto" width="270" height="260">
+                    <!-- width: 270px;
+                    height: 260px; -->
+                    <figcaption>Игорь Демьяненко <br> Product Designer </figcaption>
                 </figure>
             </div>
 
             <!-- друга анкета -->
             <div>
                 <figure>
-                    <img src="img/team_card2.jpg" alt="no foto">
+                    <img src="img/team_card2.jpg" alt="no foto" width="270" height="260">
+                    <figcaption>Ольга Репина <br> Frontend Developer </figcaption>
                 </figure>
             </div>
 
             <!-- третя анкета -->
             <div>
                 <figure>
-                    <img src="img/team_card3.jpg" alt="no foto">
+                    <img src="img/team_card3.jpg" alt="no foto" width="270" height="260">
+                    <figcaption>Николай Тарасов <br> Marketing </figcaption>
                 </figure>
             </div>
 
             <!-- четверта анкета -->
             <div>
                 <figure>
-                    <img src="img/team_card4.jpg" alt="no foto">
+                    <img src="img/team_card4.jpg" alt="no foto" width="270" height="260">
+                    <figcaption>Михаил Ермаков <br> UI Designer </figcaption>
                 </figure>
             </div>
                  </div>
