--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <h2>Наша команда</h2>
             
             
-            <div>
-                <Ul></Ul>
+            <section>
+            <ul>
             <!-- перша анкета -->
               <li>  <figure>
                     <img src="images/team_card1.jpg" alt="no foto" width="270" height="260">
@@ -130,8 +130,8 @@
                 </figure>
             </li>
 
-            </Ul>
-            </div>
+            </ul>
+            </section>
                  </div>
              </main>
                          <!-- Підвал -->
